# FastApi

./: .coveragerc  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: .env  .env.docker  .env.mongo.docker  app.py  database.py  logger.py  service.py  settings.py
src/auth/: database.py  dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/notes/: database.py  exceptions.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_notes.py  test_notes_admin_data.py  test_notes_owner_data.py
